--- a/pokeno-piano-studio/package.json
+++ b/pokeno-piano-studio/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "cookieparser": "^0.1.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
