--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "build": "react-scripts build",
     "heroku-prebuild": "npm rebuild bcrypt --build-from-source"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
     "node": "20.x" 
   },
   "dependencies": {
+    "react-scripts": "^4.0.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
